src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__char__cast_char_to_string__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/char.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: String,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: String,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastStringToChar(
            CastStringToChar {
                length: None,
                fail_on_len: false,
            },
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
